Click job number to flip, header click to flip back, fix filename wrapping

--- a/frontend/src/components/FilePreviewSide.css
+++ b/frontend/src/components/FilePreviewSide.css
@@ -160,7 +160,6 @@
 .file-details {
   flex: 1;
   min-width: 0;
-  overflow: hidden;
 }
 
 .file-name {
